# tmem

./: .gitignore  CMakeLists.txt  README.md  test_tmalloc.c  tmalloc.c  tmalloc.h
cmake/: FindCheck.cmake
include/: tmalloc.h
src/: CMakeLists.txt  logger.c  logger.h  tmalloc.c
tests/: CMakeLists.txt  test_tmalloc.c
